<resources>
    <string name="app_name">일일영양</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Auth -->
    <string name="auth_toast_signup_failed">회원가입 실패</string>
    <string name="auth_toast_login_failed">로그인 실패</string>

    <!-- Fragment Titles(Labels) -->
    <string name="title_home">오늘의 영양제</string>
    <string name="title_home_add">영양제 추가</string>
    <string name="title_calendar">월별 기록</string>
    <string name="title_community">커뮤니티</string>
    <string name="title_community_write">새 글 작성</string>
    <string name="title_preference">설정</string>

    <!-- Login -->
    <string name="login_hint_email">이메일</string>
    <string name="login_hint_pwd">비밀번호</string>
    <string name="login_toast_no_email">이메일를 입력하세요.</string>
    <string name="login_toast_no_pwd">비밀번호를 입력하세요.</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_btn_google">구글 계정으로 로그인</string>
    <string name="login_signup"><u>회원가입</u></string>

    <!-- SignUp -->
    <string name="signup_hint_pwd">비밀번호(6자리 이상)</string>
    <string name="signup_hint_pwd_check">비밀번호 확인</string>
    <string name="signup_confirm">회원가입</string>
    <string name="signup_cancel">취소</string>
    <string name="signup_toast_no_match">비밀번호가 일치하지 않습니다.</string>
    <string name="signup_toast_too_short">비밀번호는 6자리 이상이어야 합니다.</string>

    <!-- Home -->
    <string name="home_no_item">새 영양제를 추가해 보세요.</string>
    <string name="home_delete_confirm">삭제하시겠습니까?</string>
    <string name="home_description_fab">새 영양제 추가</string>
    <string name="home_toast_back_pressed">\'뒤로가기\'를 한 번 더 누르면 종료됩니다.</string>

    <!-- Home RecyclerView items의 시간을 표시하기 위한 format -->
    <string name="timeInMillisToTimeFormat">%1$tp %1$tI:%1$tM</string>

    <!-- Home_Add -->
    <string name="home_add_time_label">섭취 시간</string>
    <string name="home_add_no_input">제품명을 입력하세요.</string>
    <string name="home_add_hint">제품명</string>

    <!-- Calendar -->
    <!-- Calendar Dialog의 날짜를 표시하기 위한 format -->
    <string name="timeInMillisToDateFormat">%1$tY년 %1$tb %1$te일</string>

    <!-- Community -->
    <string name="com_no_item">첫 글을 작성해 주세요.</string>
    <string name="com_description_fab">새 글 작성</string>
    <string name="com_no_content">내용을 입력하세요.</string>

    <!-- Community RecycerView items의 시간을 표시하기 위한 format -->
    <string name="timeInMillisToDateTimeFormat">%1$tY.%1$tm.%1$td %1$tH:%1$tM</string>

    <!-- Community_Detail -->
    <string name="com_detail_hint_comment">댓글</string>

    <!-- Community_Write -->
    <string name="com_write_hint_title">제목</string>
    <string name="com_write_hint_content">내용</string>
    <string name="com_write_no_title">제목을 입력하세요.</string>

    <!-- Preference -->
    <string name="pref_cat_account">계정</string>
    <string name="pref_cat_etc">기타</string>
    <string name="pref_account_logout">로그아웃</string>
    <string name="pref_dialog_logout">로그아웃 하시겠습니까?</string>
    <string name="pref_etc_license">오픈소스 라이선스</string>

    <!-- Menus -->
    <string name="menu_all_supplements">모든 영양제 목록</string>
    <string name="menu_done">완료</string>
    <string name="menu_clip">이미지 첨부</string>
    <string name="menu_edit">수정</string>
    <string name="menu_delete">삭제</string>

    <!-- AlertDialog button -->
    <string name="dialog_positive">확인</string>
    <string name="dialog_neutral">취소</string>
</resources>