<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="confirmListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="cancelListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Theme.IIYY.BaseLayoutPadding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/signup_layout"/>

        <LinearLayout
            android:id="@+id/signup_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/login_logo"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                style="@style/Theme.IIYY.EditText"
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signup_layout_margin"
                android:padding="@dimen/login_input_padding"
                android:inputType="textEmailAddress"
                android:hint="@string/login_hint_email"
                android:autofillHints="@string/login_hint_email"
                android:textColorHint="@color/gray_500_a70"/>

            <include layout="@layout/divider"/>

            <EditText
                style="@style/Theme.IIYY.EditText"
                android:id="@+id/signup_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signup_layout_margin"
                android:padding="@dimen/login_input_padding"
                android:inputType="textPassword"
                android:hint="@string/signup_hint_pwd"
                android:autofillHints="@string/signup_hint_pwd"
                android:textColorHint="@color/gray_500_a70"/>

            <include layout="@layout/divider"/>

            <EditText
                style="@style/Theme.IIYY.EditText"
                android:id="@+id/signup_pwd_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signup_layout_margin"
                android:padding="@dimen/login_input_padding"
                android:inputType="textPassword"
                android:hint="@string/signup_hint_pwd_check"
                android:autofillHints="@string/signup_hint_pwd_check"
                android:textColorHint="@color/gray_500_a70"/>

            <include layout="@layout/divider"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signup_btn_margin"
                android:background="@drawable/bg_btn"
                android:backgroundTint="?colorPrimary"
                android:text="@string/signup_confirm"
                android:textColor="@color/white"
                android:onClick="@{confirmListener}"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signup_layout_margin"
                android:background="@drawable/bg_btn_cancel"
                android:text="@string/signup_cancel"
                android:textColor="?colorOnSurface"
                android:onClick="@{cancelListener}"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>